Modified omnetpp.ini file, enable simulation in command line

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,23 +1,8 @@
 [General]
 
 [Config FatTree]
-network =Fat_tree
-record-eventlog = true
+network = Fat_tree
+#record-eventlog = true
 # argument to exponential() is the mean; truncnormal() returns values from
 # the normal distribution truncated to nonnegative values
-Fat_tree.processor[0].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[1].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[2].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[3].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[4].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[5].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[6].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[7].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[8].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[9].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[10].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[11].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[12].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[13].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[14].sendNext = truncnormal(3s,1s)
-Fat_tree.processor[15].sendNext = truncnormal(3s,1s)
+sim-time-limit = 1.000010s
